# MSTeams-Bot

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
contract-intelligence-platform/: .dockerignore  App.tsx  Dockerfile  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
contract-intelligence-platform/components/dashboard/: ContractLibrary.tsx  ContractPreviewDrawer.tsx  ContractTypeSelector.tsx  GoverningLawChart.tsx  IndustrySelector.tsx  KPIWidget.tsx  NLQ_Search.tsx  PortfolioDashboard.tsx  RiskByTypeChart.tsx  RiskDistributionChart.tsx
contract-intelligence-platform/components/details/: AI_ExtractedData.tsx  AI_Summary.tsx  ContractDetails.tsx  DocumentViewer.tsx  DueDiligenceChecklist.tsx  KeyClauses.tsx
contract-intelligence-platform/components/ui/: Card.tsx  Header.tsx  Icons.tsx
contract-intelligence-platform/data/: mockData.ts
contract-intelligence-platform/docs/: backend_spec.md  backlog.md  requirements.md  roadmap.md
contract-intelligence-platform/hooks/: useCalculatedMetrics.ts
contract-intelligence-platform/services/: ai.ts
sentinel-ai_-autonomous-risk-assurance/: App.tsx  Dockerfile  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
sentinel-ai_-autonomous-risk-assurance/components/: ActivityVisualizer.tsx  AddAgentModal.tsx  AddAppModal.tsx  AddRiskModal.tsx  ReportModal.tsx  RiskDashboard.tsx  SequenceDiagram.tsx  Sidebar.tsx  Terminal.tsx  WelcomeModal.tsx
sentinel-ai_-autonomous-risk-assurance/docs/: agent_workflow_outcomes.md  architecture_implementation_plan.md  demo_pitch.md  guide_building_autonomous_agents.md  presentation_slides.md
sentinel-ai_-autonomous-risk-assurance/services/: geminiService.ts  prompts.ts
teams_integration/: Dockerfile  README.md  app.py  start_server.py
(+7 files in other folders)
