[project]
name = "msteams-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
ms-integration = [
    "cryptography>=46.0.3",
    "microsoft-agents-authentication-msal>=0.7.0",
    "microsoft-agents-hosting-aiohttp>=0.6.1",
]
agent = [
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
]
local_dev = [
    "pytest>=8.4.2",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
]
dev = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
